--- a/WebWinClient/Shared/MainLayout.cshtml
+++ b/WebWinClient/Shared/MainLayout.cshtml
@@ -6,7 +6,7 @@
 
 <div class="main">
     <div class="top-row px-4">
-        <a href="https://github.com/Chtau" target="_blank" class="ml-md-auto">Github</a>
+        <a href="https://github.com/Chtau/BlazorWebWinClinet" target="_blank" class="ml-md-auto">Github Repo</a>
     </div>
 
     <div class="content px-4">
