--- a/WebWinClient/Shared/NavMenu.cshtml
+++ b/WebWinClient/Shared/NavMenu.cshtml
@@ -13,13 +13,13 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="terminal">
+                <span class="oi oi-excerpt" aria-hidden="true"></span> Terminal
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="import">
+                <span class="oi oi-data-transfer-upload" aria-hidden="true"></span> Import
             </NavLink>
         </li>
     </ul>
