--- a/WebWinClient/wwwroot/css/site.css
+++ b/WebWinClient/wwwroot/css/site.css
@@ -1,4 +1,5 @@
 ﻿@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
+@import url('shell.css');
 
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -26,7 +27,7 @@ app {
     }
 
 .sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    background-color: #172472;
 }
 
     .sidebar .top-row {
@@ -121,3 +122,19 @@ app {
         display: block;
     }
 }
+
+.alert-wrapper {
+    position: fixed;
+    bottom: 0px;
+    left: 30%;
+    right: 30%;
+    z-index: 100;
+}
+
+@media (max-width: 950px) {
+    .alert-wrapper {
+        left: 15%;
+        right: 15%;
+    }
+}
+
